src/styles/sass/layout/_header.scss
@use "../abstracts/variables";
@use "../themes/themes";

@use "sass:map";

header {
  z-index: 90;
  width: 100%;
  position: sticky;
  top: -1px;
  padding: 1.5% 0 !important;

  .nav-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    .menu {
      width: 8rem;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
    }

    .menu-icon-bloc {
      .menu-icon span {
        @include themes.themed {
          background: themes.t("secondary-color");
        }
        border-radius: 0px;
        height: 0.5rem;
        margin: 0.2rem 0;
        transition: 0.5s cubic-bezier(0.68, -0.6, 0.32, 1.6);
      }

      span:nth-of-type(1) {
        width: 100%;
      }

      span:nth-of-type(2) {
        width: 100%;
      }

      input[type="checkbox"] {
        display: none;
      }

      input[type="checkbox"]:checked ~ span:nth-of-type(1) {
        transform-origin: bottom;
        // transform: rotate(45deg) translate(0.5rem, 0.4rem);
        transform: rotatez(45deg) translate(0.5rem, 0rem);
      }

      input[type="checkbox"]:checked ~ span:nth-of-type(2) {
        transform-origin: top;
        // transform: rotate(-45deg);
        transform: rotatez(-45deg) translate(0.5rem, 0rem);
      }
    }
  }

  .menu-icon {
    display: flex;
    flex-direction: column;
    width: 2.5rem;
    cursor: pointer;
  }

  .logo {
    width: 5rem;
    margin: auto;
    display: block;

    rect {
      @include themes.themed {
        fill: themes.t("secondary-color");
      }
    }
  }
}

.nav-menu {
  z-index: 89;
  position: fixed;
  top: 2rem;
  width: 100%;
  height: 100vh;
  transition: 0.5s cubic-bezier(0.68, -0.6, 0.32, 1.6);

  ul {
    height: 100vh;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  li {
    font-size: 4rem;
    line-height: 0.9;
    list-style: none;
    padding: 1rem 0;

    img {
      width: 4rem;
    }
  }

  a {
    @include themes.themed {
      color: themes.t("secondary-color");
    }
    transition: all ease-in-out 0.2s;
  }

  a:hover,
  .active-menu-link {
    color: variables.$brand-color !important;
    text-decoration: none;
  }
}

.show-nav-menu {
  transform: translate(0vw, 0vh);
}

.hide-nav-menu {
  transform: translate(0vw, -100vh);
}

@media (max-width: map.get(variables.$breakpoints, "tablet")) {
  header {
    padding: 2% 0 !important;

    .logo {
      width: 4rem;
    }
  }

  .nav-menu {
    li {
      font-size: 2rem;
    }
    li img {
      width: 3rem;
    }
  }
}

@media (max-width: map.get(variables.$breakpoints, "mobile large")) {
  header {
    padding: 5% 0 !important;
    .nav-bar {
      .menu {
        width: 6.5rem;
      }
    }

    .menu-icon {
      width: 2rem;
    }

    .logo {
      width: 3.5rem;
    }
  }
}

